--- a/css/main.css
+++ b/css/main.css
@@ -76,14 +76,6 @@ body {
     line-height: 1.4;
 }
 
-.wrapper {
-    max-width: 1920px;
-    height: auto;
-    margin: auto;
-    position: relative;
-    overflow: hidden;
-}
-
 .fw500 {
     font-weight: 500;
 }
@@ -120,6 +112,10 @@ ul li {
     text-transform: uppercase;
 }
 
+.desc_remove {
+    display: none;
+}
+
 .wrapper {
     max-width: 2560px;
     width: 100%;
@@ -128,9 +124,18 @@ ul li {
     margin: 0 auto;
 }
 
+.swiper-wrapper {
+    height: 100vh;
+    width: 100vw;
+}
+
+.swiper-slide {
+    overflow: hidden;
+}
+
 .section_page1 {
     padding-top: 15px;
-    height: 100vh;
+    height: 100%;
     background: url('../img/section_page1_bg.jpg') center / cover no-repeat;
     display: flex;
     flex-direction: column;
@@ -200,8 +205,8 @@ ul li {
 }
 
 .section_page2 {
-    padding: 1% 0;
-    height: 100vh;
+    padding: 15px 0 30px 0;
+    height: 100%;
     background: url('../img/section_page2_bg.jpg') center / cover no-repeat;
     display: flex;
     flex-direction: column;
@@ -211,9 +216,9 @@ ul li {
 .section_page2_row1 {
     display: flex;
     justify-content: space-between;
-    gap: 10%;
-    padding: 0 3%;
-    max-height: 60%;
+    height: 50%;
+    gap: 30px;
+    padding: 0 15px;
     position: relative;
 }
 
@@ -257,15 +262,6 @@ ul li {
     align-items: flex-end;
 }
 
-.page2_row1_card:first-child .page2_row1_cardTitle {
-    text-align: right;
-    margin-right: 0;
-}
-
-.page2_row1_card:nth-child(2) .page2_row1_cardTitle {
-    margin-right: 6%;
-}
-
 .page2_row1_card:nth-child(2) img {
     height: 100%;
 }
@@ -279,15 +275,15 @@ ul li {
 
 .page2_row1_cardImg img {
     height: 100%;
-    background-size: contain;
+    background-size: cover;
 }
 
 .section_page2_row2 {
-    margin: 2% 0;
+    margin: 45px 0 15px 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1%;
+    gap: 10px;
     color: #fff;
 }
 
@@ -352,7 +348,7 @@ ul li {
 }
 
 .section_page3 {
-    height: 100vh;
+    height: 100%;
     position: relative;
 }
 
@@ -375,6 +371,8 @@ ul li {
     height: 100%;
     position: absolute;
     min-width: 1920px;
+    min-height: 850px;
+    background-position: bottom center;
 }
 
 .person_block_bgM {
@@ -425,7 +423,7 @@ ul li {
 
 .section_page4 {
     /*background: url('../img/section_page4_bg.jpg') center / cover no-repeat;*/
-    height: 100vh;
+    height: 100%;
 }
 
 .page4_row1 {
@@ -570,6 +568,11 @@ ul li {
     .section_page2_row1::before {
         top: 78%;
         height: 28px;
+    }
+
+    .section_page3_bg img {
+        min-width: 1920px;
+        min-height: 800px;
     }
 
     .row3_coll_text {
@@ -822,6 +825,15 @@ ul li {
 }
 
 @media (max-width: 567px) {
+
+    .desc_remove {
+        display: block;
+    }
+
+    .mob_remove {
+        display: none;
+    }
+
     .section_page1 {
         min-height: 100vh;
         height: auto;
@@ -859,16 +871,22 @@ ul li {
         border: 3px solid #FF1854;
     }
 
+
     .section_page2 {
-        padding: 80px 15px 50px 15px;
+        padding: 15px;
         height: auto;
         min-height: 100vh;
         background: url('../img/section_page2_bg_m.jpg') center / cover no-repeat;
+        justify-content: center;
     }
 
     .section_page2_row1 {
         flex-direction: column;
-        gap: 160px;
+        gap: initial;
+        padding: 0;
+        max-height: initial;
+        height: 100%;
+        align-items: center;
     }
 
     .page2_row1_card {
@@ -885,6 +903,11 @@ ul li {
     .page2_row1_cardImg img {
         position: relative;
         z-index: 3;
+
+    }
+
+    .page2_row1_card:last-child img {
+        height: 100%;
     }
 
     .page2_row1_card:nth-child(2) {
@@ -928,11 +951,12 @@ ul li {
         flex-direction: column;
         gap: 10px;
         text-align: center;
-        margin: 80px 0 30px 0;
+        margin: 0 0 30px 0;
     }
 
     .person_block_bgM {
         display: block;
+        max-height: 100vh;
     }
 
     .row3_coll_text {
@@ -956,7 +980,7 @@ ul li {
     }
 
     .page2_row3_coll li {
-        gap: 25px;
+        gap: 20px;
     }
 
     .row3_coll_icon {
@@ -979,16 +1003,20 @@ ul li {
 
     .section_page3 {
         min-height: 100vh;
+        max-height: 100vh;
         height: auto;
     }
 
     .person_block {
+        max-height: 100vh;
         position: relative;
     }
 
     .person_block_bgM img {
         max-width: 100%;
         width: 100%;
+        max-height: 100vh;
+        min-height: 100vh;
     }
 
     .page3_blockText {
@@ -1072,8 +1100,8 @@ ul li {
         position: relative;
         top: 0;
         left: 0;
-        max-width: 100%;
-        margin: -80px -150px -110px 100px;
+        max-width: 50%;
+        margin: -90px -190px -110px 120px;
     }
 
     .page4_row2 {
