add viewport height

--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ ul li {
 
 .section_page1_title {
     text-align: center;
-    font-size: 82px;
+    font-size: 62px;
     text-transform: uppercase;
     font-weight: 700;
     line-height: 0.9;
@@ -153,9 +153,7 @@ ul li {
 }
 
 .section_page1_phoneImg {
-    min-width: 620px;
-    max-width: 620px;
-    width: 100%;
+    height: 35vh;
     border: 7px solid #e6a145;
     border-radius: 30px;
     padding: 1%;
@@ -171,7 +169,7 @@ ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 82px;
+    font-size: 62px;
     padding: 0 15px;
     font-weight: 700;
     line-height: 0.9;
@@ -180,14 +178,14 @@ ul li {
 }
 
 .section_page1_title2 span:last-child {
-    font-size: 100px;
+    font-size: 72px;
     font-weight: 300;
     text-transform: uppercase;
 }
 
 .section_page1_btn {
     margin-top: 20px;
-    font-size: 64px;
+    font-size: 44px;
     line-height: 1;
     font-weight: 300;
     color: #fff;
@@ -246,7 +244,7 @@ ul li {
 
 .page2_row1_cardTitle {
     width: 100%;
-    font-size: 82px;
+    font-size: 72px;
     font-weight: 700;
     line-height: .7;
     text-transform: uppercase;
@@ -327,10 +325,10 @@ ul li {
 }
 
 .row3_coll_icon {
-    min-width: 80px;
-    max-width: 80px;
-    max-height: 80px;
-    min-height: 80px;
+    min-width: 65px;
+    max-width: 65px;
+    max-height: 65px;
+    min-height: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -424,19 +422,26 @@ ul li {
 .section_page4 {
     /*background: url('../img/section_page4_bg.jpg') center / cover no-repeat;*/
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .page4_row1 {
     display: flex;
     gap: 50px;
     background: url('../img/section_page4_bg.jpg') center / cover no-repeat;
-    padding: 50px 4%;
+    padding: 15px;
+    height: 80vh;
 }
 
 .page4_row1_text {
     max-width: 33.333%;
     width: 100%;
-    padding: 2% 0;
+    padding: 15px 0;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .page4_row1_text_title {
@@ -454,6 +459,8 @@ ul li {
 }
 
 .page4_btnWr {
+    max-width: 364px;
+    text-align: center;
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -496,10 +503,11 @@ ul li {
     width: 100%;
     position: absolute;
     left: 36%;
+    bottom: 15px;
 }
 
 .page4_row2 {
-    padding: 5px 15px;
+    padding: 15px;
 }
 
 .page4_row2_title {
@@ -562,6 +570,12 @@ ul li {
         width: 30px;
         height: 120px;
     }
+
+    .page4_row1_img {
+        max-width: 500px;
+        left: 43%;
+        bottom: 15px;
+    }
 }
 
 @media (max-width: 1440px) {
@@ -571,8 +585,8 @@ ul li {
     }
 
     .section_page3_bg img {
-        min-width: 1920px;
-        min-height: 800px;
+        min-width: 1700px;
+        min-height: 660px;
     }
 
     .row3_coll_text {
@@ -580,8 +594,9 @@ ul li {
     }
 
     .page3_blockText {
-        font-size: 24px;
-        left: 10%;
+        top: 36%;
+        font-size: 20px;
+        left: 15%;
     }
 
     .page3_blockText::before {
@@ -592,7 +607,7 @@ ul li {
     .page3_blockText2 {
         max-width: 350px;
         left: initial;
-        right: 2%;
+        right: 4%;
     }
 
     .page3_blockText2::before {
@@ -605,15 +620,26 @@ ul li {
         max-width: 40%;
     }
 
-    .page4_row1_img {
-        max-width: 600px;
-        left: 43%;
+    .page4_row1_text_title {
+        max-width: 300px;
+    }
+
+    .page4_row1_text_subTitle {
+        font-size: 42px;
+    }
+
+    .page4_btn {
+        font-size: 40px;
+    }
+
+    .downloadIconWr {
+        max-width: 55px;
     }
 }
 
 @media (max-width: 1350px) {
     .page2_row1_cardTitle {
-        font-size: 72px;
+        font-size: 64px;
         margin-bottom: 15px;
     }
 
@@ -632,9 +658,9 @@ ul li {
     }
 
     .page3_blockText {
-        top: 45%;
+        top: 40%;
         font-size: 22px;
-        left: 9%;
+        left: 10%;
     }
 
     .page3_blockText::before {
@@ -645,6 +671,7 @@ ul li {
 
     .page3_blockText2 {
         max-width: 320px;
+        right: 3%;
         left: initial;
     }
 
@@ -657,14 +684,10 @@ ul li {
 
 @media (max-width: 1024px) {
     .section_page1_title {
-        font-size: 72px;
+        font-size: 56px;
     }
 
     .section_page1_phoneImg {
-        max-width: 33%;
-        min-width: 580px;
-        width: 100%;
-        height: 33%;
         border: 5px solid #e6a145;
         border-radius: 30px;
         padding: 1.5%;
@@ -673,15 +696,15 @@ ul li {
 
     .section_page1_btn {
         margin-top: 2%;
-        font-size: 50px;
+        font-size: 36px;
     }
 
     .section_page1_title2 {
-        font-size: 72px;
+        font-size: 56px;
     }
 
     .section_page1_title2 span:last-child {
-        font-size: 82px;
+        font-size: 62px;
     }
 
     .section_page2_row1::before {
@@ -692,7 +715,7 @@ ul li {
     }
 
     .badge_page {
-        font-size: 36px;
+        font-size: 28px;
     }
 
     .row3_coll_icon {
@@ -718,7 +741,7 @@ ul li {
     }
 
     .page3_blockText {
-        top: 48%;
+        top: 42%;
         padding: 10px;
         font-size: 20px;
         left: 8%;
@@ -734,8 +757,7 @@ ul li {
     }
 
     .page4_row1_img {
-        max-width: 75%;
-        left: 53%;
+        left: 50%;
     }
 
     .page4_btn {
@@ -751,26 +773,24 @@ ul li {
 
 @media (max-width: 991px) {
     .section_page1_title {
-        font-size: 36px;
+        font-size: 38px;
     }
 
     .section_page1_phoneImg {
-        max-height: 300px;
-        height: 100%;
         padding: 1.5%;
         margin: 3% 0;
     }
 
     .section_page1_title2 {
-        font-size: 52px;
+        font-size: 30px;
     }
 
     .section_page1_title2 span:last-child {
-        font-size: 62px;
+        font-size: 34px;
     }
 
     .page2_row1_cardTitle {
-        font-size: 48px;
+        font-size: 46px;
         margin-bottom: 10px;
     }
 
@@ -819,7 +839,6 @@ ul li {
     }
 
     .page4_row1_img {
-        max-width: 75%;
         left: 53%;
     }
 }
@@ -852,7 +871,7 @@ ul li {
         width: 100%;
         height: auto;
         border: 3px solid #e6a145;
-        border-radius: 30px;
+        border-radius: 20px;
         margin: 40px 0 60px 0;
     }
 
@@ -876,28 +895,80 @@ ul li {
         padding: 15px;
         height: auto;
         min-height: 100vh;
+        max-height: 100vh;
         background: url('../img/section_page2_bg_m.jpg') center / cover no-repeat;
         justify-content: center;
+        position: relative;
+    }
+
+    .section_page2v1::before {
+        content: '';
+        position: absolute;
+        bottom: -355px;
+        right: 50px;
+        width: 23px;
+        height: 590px;
+        background: url('../img/page2_line1_m.png');
+    }
+
+    .section_page2v2::before {
+        content: '';
+        position: absolute;
+        top: -250px;
+        right: 50px;
+        width: 23px;
+        height: 590px;
+        background: url('../img/page2_line1_m.png');
+    }
+
+    .section_page2v2::after {
+        content: '';
+        position: absolute;
+        bottom: -290px;
+        left: 50px;
+        width: 23px;
+        height: 590px;
+        background: url('../img/page2_line1_m.png');
+    }
+
+    .section_page2v3::after {
+        content: '';
+        position: absolute;
+        top: -300px;
+        left: 50px;
+        width: 23px;
+        height: 590px;
+        background: url('../img/page2_line1_m.png');
+    }
+
+    .section_page2v3 img {
+        max-height: 80vh !important;
     }
 
     .section_page2_row1 {
         flex-direction: column;
         gap: initial;
         padding: 0;
-        max-height: initial;
-        height: 100%;
+        height: auto;
+        max-height: 94vh;
         align-items: center;
     }
 
     .page2_row1_card {
         max-width: 100%;
         width: 100%;
+        max-height: 94vh;
         position: relative;
         z-index: 3;
     }
 
     .page2_row1_cardTitle {
         font-size: 36px;
+    }
+
+    .page2_row1_cardImg picture {
+        height: initial;
+        display: inline;
     }
 
     .page2_row1_cardImg img {
@@ -907,7 +978,8 @@ ul li {
     }
 
     .page2_row1_card:last-child img {
-        height: 100%;
+        height: auto;
+        max-height: 80%;
     }
 
     .page2_row1_card:nth-child(2) {
@@ -966,7 +1038,7 @@ ul li {
     }
 
     .badge_page {
-        font-size: 18px;
+        font-size: 18px !important;
         padding: 10px;
     }
 
@@ -1077,7 +1149,7 @@ ul li {
 
     .page4_btnWr {
         display: inline-block;
-        max-width: 100%;
+        max-width: 164px;
     }
 
     .page4_downloadIcon {
@@ -1100,12 +1172,13 @@ ul li {
         position: relative;
         top: 0;
         left: 0;
-        max-width: 50%;
+        bottom: 15px;
+        max-width: 300px;
         margin: -90px -190px -110px 120px;
     }
 
     .page4_row2 {
-        padding: 70px 15px 30px 15px;
+        padding: 30px 15px 30px 15px;
     }
 
     .page4_row2_title {
@@ -1122,5 +1195,27 @@ ul li {
     .page4_row2 ul li:last-child img {
         max-width: 30px;
         height: 24px;
+    }
+}
+
+@media (min-width: 1921px) {
+    .page3_blockText::before {
+        top: 100%;
+        right: -10%;
+        width: 40px;
+        height: 200px;
+    }
+
+    .page3_blockText2::before {
+        top: 100%;
+        left: -5%;
+        width: 30px;
+        height: 150px;
+    }
+}
+
+@media (max-height: 720px) {
+    .badge_page {
+        font-size: 32px;
     }
 }
