--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ ul li {
     padding: 10px 30px;
     text-decoration: none;
     transition: .3s ease;
+    cursor: pointer;
 }
 
 .section_page1_btn:hover {
@@ -1132,6 +1133,7 @@ ul li {
         background: url('../img/section_page4_bg_m.jpg') top center / cover no-repeat;
         padding: 30px 15px;
         flex-direction: column;
+        justify-content: center;
     }
 
     .page4_row1_text {
@@ -1172,12 +1174,19 @@ ul li {
         position: relative;
         top: 0;
         left: 0;
+        max-width: 85%;
+        padding-bottom: 75%;
         bottom: 15px;
-        max-width: 300px;
-        margin: -90px -190px -110px 120px;
+        margin: -90px -180px -110px 120px;
+        pointer-events: none;
+    }
+
+    .page4_row1_img img {
+        position: absolute;
     }
 
     .page4_row2 {
+        margin-top: -33%;
         padding: 30px 15px 30px 15px;
     }
 
